# amixima

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: examples.md  quickstart.md  release-checklist.md  soundcourse-v1.md  troubleshooting.md
examples/: clean-gain.jsonld  slap-delay.ini  soft-compress.jsonld  spacious-delay.jsonld  warm-bus.ini  warm-bus.jsonld
src/: dsp.rs  error.rs  main.rs  ontology.rs  parser.rs  ui.rs
src/core/: mod.rs  soundcourse.rs  validation.rs
src/parser/: ini.rs  jsonld.rs  mod.rs
tests/fixtures/: README.md
