[package]
name = "amixima"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI - Latest Ratatui
ratatui = "0.30.0"
crossterm = "0.28" # v0.30.0 works best with crossterm 0.28+
color-eyre = "0.6"

# Audio Engine
cpal = "0.15"
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"

# Serialization & Logic
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
configparser = "3.1" # For Soundcourse INI parsing
uuid = { version = "1.8", features = ["v4", "serde"] }

# Async & Utilities
tokio = { version = "1.37", features = ["full"] }
chrono = "0.4"
rand = "0.8"

clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
